Bug 76778 - Wildcard support in the File Open dialog is broken
Summary: Wildcard support in the File Open dialog is broken
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.2.0.3 rc
Hardware: Other All
: medium normal
Assignee: Andras Timar
URL:
Whiteboard: target:4.3.0 target:4.2.4
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-03-29 15:20 UTC by Pedro
Modified: 2014-04-01 10:16 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pedro 2014-03-29 15:20:37 UTC
As discussed in

http://ask.libreoffice.org/en/question/32096/wildcard-support-in-the-file-open-name-box-in-4221/

support for wildcards in the LibreOffice dialog File Open is broken in the 4.2 branch under Windows (XP at least) and Linux (Fedora, Debian and Crunchbang at least)

Under Windows it does work as expected when using the OS native Open dialog.

This is a regression from the 4.1 branch.
Comment 1 Owen Genat (retired) 2014-03-29 23:48:20 UTC
As my comments in the linked AskLO thread indicate, this option appears to be dependent on the desktop environment / window manager in use i.e., LXDE / XFCE(?) / Openbox do not appear to support this feature. In any case, it seems a confirmed bug.
Comment 2 Andras Timar 2014-03-30 09:40:10 UTC
 ab63cac8cf1bb39d68d4faf99bbce99a5751067a is the first bad commit
commit ab63cac8cf1bb39d68d4faf99bbce99a5751067a
Author: Noel Grandin <noel@peralex.com>
Date:   Fri Sep 20 16:47:36 2013 +0200

    convert fpicker module from String to OUString
    
    Change-Id: I665facff9f37f089f97e91f71e45578ad03e0653
Comment 3 Wolfgang Denk 2014-03-30 10:25:03 UTC
I see this problem running fvwm2 as WM (on Fedora 20).
Comment 4 Commit Notification 2014-03-30 10:56:27 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e7384daa27c954efa6a66dda829f23d7ad1b2a01

fdo#76778 fix wildcard support in File Open dialog



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Pedro 2014-03-30 12:27:05 UTC
@Andras, thanks!

Since this is a regression, could you please cherry pick this patch to the 4.2 branch so that it is included in the upcoming version 4.2.4?
Comment 6 Commit Notification 2014-03-31 10:52:56 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0094a8c95c901d22fd56e9613f017fa8be3affd5&h=libreoffice-4-2

fdo#76778 fix wildcard support in File Open dialog


It will be available in LibreOffice 4.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Wolfgang Denk 2014-04-01 07:44:18 UTC
I tested the version from libreoffice-4-2~2014-03-31_09.29.41_LibreOfficeDev_4.2.4.0.0_Linux_x86-64_rpm.tar.gz


This does *NOT* fix the problem.  I still get an "/home/wd/office/2014-* does not exist" error when I try to enter "2014-*" in the file open dialog and press enter, even though a number of files matching this pattern do exist.
Comment 8 Andras Timar 2014-04-01 07:49:20 UTC
(In reply to comment #7)
> I tested the version from
> libreoffice-4-2~2014-03-31_09.29.41_LibreOfficeDev_4.2.4.0.0_Linux_x86-
> 64_rpm.tar.gz
> 
> 
> This does *NOT* fix the problem.  I still get an "/home/wd/office/2014-*
> does not exist" error when I try to enter "2014-*" in the file open dialog
> and press enter, even though a number of files matching this pattern do
> exist.

How could a patch dated from 2014-03-31 10:52:56 UTC fix an issue in a build that was made earlier 2014-03-31_09.29.41? 

Please try it in today's daily build.