fdo#76778 fix wildcard support in File Open dialog

Change-Id: Ifbdf6847ddecc7848828247655e729dfe2299b30